Remove Java 8 incompatible code (#11197)